# nnheaders

./: CMakeLists.txt  README.md
.github/workflows/: lint_pr.yml
include/: nv.h
include/nn/: applet.h  atk.h  audio.h  bcat.h  crypto.h  diag.h  err.h  fs.h  hid.h  irs.h  mem.h  nn.h  nn_Allocator.h  nn_BitTypes.h  oe.h  os.h  ro.h  socket.h  ssl.h  svc.h  swkbd.h  types.h  util.h
include/nn/album/: album_types.h
include/nn/atk/: AuxBus.h  atk_Adpcm.h  atk_BiquadFilterCallback.h  atk_FsSoundArchive.h  atk_Global.h  atk_SequenceSoundHandle.h  atk_SoundActor.h  atk_SoundArchive.h  atk_SoundArchivePlayer.h  atk_SoundDataManager.h  atk_SoundHandle.h  atk_SoundHeap.h  atk_SoundMemoryAllocatable.h  atk_SoundPlayer.h  atk_SoundStartable.h  atk_SoundSystem.h  atk_StreamSoundHandle.h  atk_WaveSoundHandle.h
include/nn/atk/detail/: BasicSound.h  atk_AddonSoundArchiveContainer.h  atk_AdvancedWaveSound.h  atk_AdvancedWaveSoundFile.h  atk_AdvancedWaveSoundFileReader.h  atk_AdvancedWaveSoundPlayer.h  atk_AdvancedWaveSoundRuntime.h  atk_BankFile.h  atk_BasicSound.h  atk_BasicSoundPlayer.h  atk_BusMixVolumePacket.h  atk_Config.h  atk_DisposeCallback.h  atk_DisposeCallbackManager.h  atk_ElementType.h  atk_ExternalSoundPlayer.h  atk_GroupFile.h  atk_GroupFileReader.h  atk_IRegionInfoReadable.h  atk_IStreamDataDecoder.h  atk_IntrusiveList.h  atk_ItemType.h  atk_LoaderManager.h  atk_MoveValue.h  atk_NoteOnCallback.h  atk_OutputAdditionalParam.h  atk_PlayerHeap.h  atk_PlayerHeapDataManager.h  atk_RegionManager.h  atk_SequenceSoundFile.h  atk_SoundArchiveFile.h  atk_SoundArchiveFileReader.h  atk_SoundArchiveLoader.h  atk_SoundArchiveManager.h  atk_SoundInstanceManager.h  atk_SoundRuntimeUtility.h  atk_StartInfoReader.h  atk_StreamSoundFile.h  atk_StreamSoundPrefetchFile.h  atk_Util.h  (+8 more)
include/nn/atk/effect/: atk_EffectAux.h  atk_EffectBase.h
include/nn/atk/submix/: atk_ChannelMixVolume.h  atk_FinalMix.h  atk_OutputMixer.h  atk_OutputReceiver.h  atk_SubMix.h
include/nn/atk/util/: atk_AudioRendererPerformanceReader.h  atk_DeviceOutRecorder.h  atk_Global.h  atk_ProfileReader.h  atk_TaskProfileReader.h
include/nn/audio/: audio_Adpcm.h  audio_AudioRendererTypes.h  audio_Common.h  audio_EffectTypes.h  audio_FinalMixTypes.h  audio_MemoryPoolTypes.h  audio_PerformanceMetrics.h  audio_PerformanceMetricsTypes.h  audio_SampleFormat.h  audio_SinkTypes.h  audio_SubMixTypes.h  audio_VoiceTypes.h  audio_WaveBuffer.h
include/nn/font/: font_DispStringBuffer.h  font_Font.h  font_GlyphTreeMap.h  font_RectDrawer.h  font_ResourceFormat.h  font_TagProcessorBase.h  font_TextureCache.h  font_Types.h  font_Util.h
include/nn/font/detail/: font_FreeList.h
include/nn/fs/: fs_directories.h  fs_files.h  fs_mount.h  fs_rom.h  fs_save.h  fs_types.h
include/nn/g3d/: AnimObj.h  BindFuncTable.h  BoneVisibilityAnimObj.h  MaterialObj.h  ModelObj.h  ResFile.h  ResModel.h  ResSceneAnim.h  ResSkeleton.h  ViewVolume.h
include/nn/gfx/: api.h  buffer.h  device.h  gfx_Buffer.h  gfx_BufferData-api.nvn.8.h  gfx_BufferInfo.h  gfx_CommandBuffer.h  gfx_CommandBufferData-api.nvn.8.h  gfx_Common.h  gfx_DescriptorPoolData-api.nvn.8.h  gfx_DescriptorSlot.h  gfx_DeviceData-api.nvn.8.h  gfx_DeviceInfo.h  gfx_Enum.h  gfx_Interoperation-api.nvn.8.h  gfx_MemoryPool.h  gfx_MemoryPoolData-api.nvn.8.h  gfx_PipelineData-api.nvn.8.h  gfx_QueueData-api.nvn.8.h  gfx_ResShader.h  gfx_ResShaderData.h  gfx_ResTexture.h  gfx_ResUserData.h  gfx_Sampler.h  gfx_SamplerData-api.nvn.8.h  gfx_Shader.h  gfx_ShaderData-api.nvn.8.h  gfx_StateData-api.nvn.8.h  gfx_StateInfo.h  gfx_StateInfoData.h  gfx_SwapChainData-api.nvn.8.h  gfx_SyncData-api.nvn.8.h  gfx_TextureData-api.nvn.8.h  gfx_TextureInfo.h  gfx_TextureInfoData.h  gfx_Types.h  memory.h
include/nn/gfx/detail/: bufferimpl.h  deviceimpl.h  fwd.h  gfx_Buffer-api.nvn.8.h  gfx_CommandBuffer-api.nvn.8.h  gfx_DataContainer.h  gfx_DescriptorPool-api.nvn.8.h  gfx_Device-api.nvn.8.h  gfx_Fwd.h  gfx_MemoryPool-api.nvn.8.h  gfx_Misc.h  gfx_Pipeline-api.nvn.8.h  gfx_Queue-api.nvn.8.h  gfx_RequiredMemory.h  gfx_ResShaderImpl.h  gfx_RootSignature-api.nvn.8.h  nvn.h  pool.h  (+8 more)
include/nn/irs/: ClusteringProcessorState.h  DpdProcessorPointingState.h  ImageTransferProcessorConfig.h  ImageTransferProcessorFormat.h  ImageTransferProcessorState.h  MomentProcessorState.h  TeraPluginProcessorConfig.h  TeraPluginProcessorState.h
include/nn/nex/: berkeley.h
include/nn/nfp/: nfp.h  nfp_types.h
include/nn/os/: os_MessageQueue.h  os_ThreadTypes.h
include/nn/sf/: IServiceObject.h  ISharedObject.h  hipc.h
include/nn/ssl/: BuiltInManager.h  Connection.h  Context.h  Debug.h  ssl-c-bindings.h
include/nn/swkbd/: swkbd.h
include/nn/ui2d/: Layout.h  Pane.h  Types.h  Util.h  ui2d_Animation.h  ui2d_Animator.h  ui2d_Bounding.h  ui2d_Common.h  ui2d_ControlCreator.h  ui2d_DrawInfo.h  ui2d_GraphicsResource.h  ui2d_Group.h  ui2d_Layout.h  ui2d_Material.h  ui2d_Pane.h  ui2d_Parts.h  ui2d_Picture.h  ui2d_ResourceAccessor.h  ui2d_Resources.h  ui2d_ShaderInfo.h  ui2d_TexMap.h  ui2d_TextBox.h  ui2d_TextSearcher.h  ui2d_Types.h  ui2d_Util.h  ui2d_Window.h  ui2d_WindowFoundation.h
include/nn/util/: BinaryTypes.h  BytePtr.h  Float2.h  MathTypes.h  util_Arithmetic.h  util_BinaryFormat.h  util_BitArray.h  util_BitFlagSet.h  util_BitPack.h  util_BytePtr.h  util_IntrusiveList.h  util_MathTypes.h  util_MatrixApi.h  util_StringUtil.h  util_TypedStorage.h
include/nn/vfx/: Resource.h
include/nvn/: nvn.h  nvn_Cpp.h  nvn_CppFuncPtrBase.h  nvn_CppFuncPtrImpl.h  nvn_DeviceConstantsNX.h  nvn_FuncPtrBase.h  nvn_FuncPtrImpl.cpp  nvn_FuncPtrInline.h  nvn_FuncPtrMacro.h  nvn_types.h
include/nvnTool/: nvnTool_GlslcInterface.h
include/vapours/results/: nfp_results.hpp  results_common.hpp
src/NintendoSDK/gfx/: gfx_Interoperation-api.nvn.cpp  gfx_StateInfo.cpp
src/NintendoSDK/nnSdk/: util.cpp
src/NintendoSDK/nvn/: nvnInit.cpp  nvn_Impl.cpp
src/NintendoWare/ui2d/: ui2d_Animation.cpp  ui2d_Bounding.cpp  ui2d_ControlCreator.cpp  ui2d_GraphicsResource.cpp  ui2d_Group.cpp  ui2d_Layout.cpp  ui2d_Pane.cpp  ui2d_ShaderInfo.cpp  ui2d_Util.cpp
(+108 files in other folders)
