project(NintendoSDK CXX ASM)

add_library(NintendoSDK OBJECT
  include/nvn/nvn_FuncPtrBase.h
  include/nvn/nvn_FuncPtrImpl.h
  include/nvn/nvn_FuncPtrInline.h
  include/nvn/nvn.h
  include/nn/types.h
  include/nn/os.h
  include/nn/nifm.h
  include/nn/prepo.h
  include/nn/vfx/Config.h
  include/nn/vfx/System.h
  include/nn/vfx/Heap.h
  include/nn/socket.h
  include/nn/aoc.h
  include/nn/fs.h
  include/nn/ro.h
  include/nn/oe.h
  include/nn/util.h
  include/nn/image.h
  include/nn/util/AccessorBase.h
  include/nn/util/BinaryTypes.h
  include/nn/util/BytePtr.h
  include/nn/util/MathTypes.h
  include/nn/util/ResDic.h
  include/nn/util/StringView.h
  include/nn/ui2d/detail/TexCoordArray.h
  include/nn/ui2d/Layout.h
  include/nn/ui2d/Parts.h
  include/nn/ui2d/Pane.h
  include/nn/ui2d/Material.h
  include/nn/g3d/BindFuncTable.h
  include/nn/g3d/ModelObj.h
  include/nn/g3d/ResMaterialAnim.h
  include/nn/g3d/ResShapeAnim.h
  include/nn/g3d/ResLightAnim.h
  include/nn/g3d/ResSkeletalAnim.h
  include/nn/g3d/ResSceneAnim.h
  include/nn/g3d/ResFile.h
  include/nn/g3d/ResMaterial.h
  include/nn/g3d/ResFogAnim.h
  include/nn/g3d/ResModel.h
  include/nn/g3d/ResSkeleton.h
  include/nn/g3d/SkeletonObj.h
  include/nn/g3d/World.h
  include/nn/nn.h
  include/nn/settings.h
  include/nn/hid.h
  include/nn/atk/detail/StreamSoundRuntime.h
  include/nn/atk/detail/BasicSound.h
  include/nn/atk/detail/WaveSoundRuntime.h
  include/nn/atk/detail/SequenceSoundRuntime.h
  include/nn/atk/detail/SoundArchiveManager.h
  include/nn/atk/detail/AdvancedWaveSoundRuntime.h
  include/nn/atk/SoundArchivePlayer.h
  include/nn/atk/SoundPlayer.h
  include/nn/atk/SoundDataManager.h
  include/nn/nex/client.h
  include/nn/nex/RootObject.h
  include/nn/nex/socket.h
  include/nn/nex/key.h
  include/nn/nex/checksum.h
  include/nn/nex/reference.h
  include/nn/nex/pseudo.h
  include/nn/nex/string.h
  include/nn/nex/instance.h
  include/nn/nex/ddl.h
  include/nn/nex/encryption.h
  include/nn/nex/cache.h
  include/nn/nex/time.h
  include/nn/nex/plugin.h
  include/nn/nex/dynamic.h
  include/nn/nex/data.h
  include/nn/nex/auth.h
  include/nn/nex/buffer.h
  include/nn/nex/system.h
  include/nn/nex/hash.h
  include/nn/time.h
  include/nn/diag.h
  include/nn/init.h
  include/nn/crypto.h
  include/nn/ssl.h
  include/nn/gfx/detail/fwd.h
  include/nn/gfx/detail/gfx_Buffer-api.nvn.8.h
  include/nn/gfx/detail/gfx_CommandBuffer-api.nvn.8.h
  include/nn/gfx/detail/gfx_Common-api.nvn.h
  include/nn/gfx/detail/gfx_DataContainer.h
  include/nn/gfx/detail/gfx_DescriptorPool-api.nvn.8.h
  include/nn/gfx/detail/gfx_Device-api.nvn.8.h
  include/nn/gfx/detail/gfx_MemoryPool-api.nvn.8.h
  include/nn/gfx/detail/gfx_Misc.h
  include/nn/gfx/detail/gfx_Pipeline-api.nvn.8.h
  include/nn/gfx/detail/gfx_Shader-api.nvn.8.h
  include/nn/gfx/detail/gfx_State-api.nvn.8.h
  include/nn/gfx/detail/gfx_Texture-api.nvn.8.h
  include/nn/gfx/util/gfx_PrimitiveShape.h
  include/nn/gfx/device.h
  include/nn/gfx/gfx_BufferData-api.nvn.8.h
  include/nn/gfx/gfx_BufferInfo.h
  include/nn/gfx/gfx_BufferInfoData.h
  include/nn/gfx/gfx_CommandBuffer.h
  include/nn/gfx/gfx_CommandBufferData-api.nvn.8.h
  include/nn/gfx/gfx_Common.h
  include/nn/gfx/gfx_DescriptorPoolData-api.nvn.8.h
  include/nn/gfx/gfx_DescriptorSlot.h
  include/nn/gfx/gfx_DeviceData-api.nvn.8.h
  include/nn/gfx/gfx_Enum.h
  include/nn/gfx/gfx_GpuAddress.h
  include/nn/gfx/gfx_MemoryPool.h
  include/nn/gfx/gfx_MemoryPoolData-api.nvn.8.h
  include/nn/gfx/gfx_PipelineData-api.nvn.8.h
  include/nn/gfx/gfx_ResUserData.h
  include/nn/gfx/gfx_ResUserDataData.h
  include/nn/gfx/gfx_ShaderData-api.nvn.8.h
  include/nn/gfx/gfx_StateData-api.nvn.8.h
  include/nn/gfx/gfx_StateInfo.h
  include/nn/gfx/gfx_StateInfoData.h
  include/nn/gfx/gfx_SwapChainInfo.h
  include/nn/gfx/gfx_SwapChainInfoData.h
  include/nn/gfx/gfx_TextureInfo.h
  include/nn/gfx/gfx_TextureInfoData.h
  include/nn/gfx/gfx_Types.h
  include/nn/gfx/gfx_VariationBase.h
  include/nn/vi.h
  include/nn/account.h
  include/nn/audio.h
  include/nn/friends.h
  include/nn/mem.h
  include/nv.h
  include/vapours/results.hpp
  include/vapours/results/sf_results.hpp
  include/vapours/results/capsrv_results.hpp
  include/vapours/results/pgl_results.hpp
  include/vapours/results/lr_results.hpp
  include/vapours/results/spl_results.hpp
  include/vapours/results/pm_results.hpp
  include/vapours/results/settings_results.hpp
  include/vapours/results/debug_results.hpp
  include/vapours/results/cal_results.hpp
  include/vapours/results/i2c_results.hpp
  include/vapours/results/results_common.hpp
  include/vapours/results/time_results.hpp
  include/vapours/results/vi_results.hpp
  include/vapours/results/ns_results.hpp
  include/vapours/results/fs_results.hpp
  include/vapours/results/hipc_results.hpp
  include/vapours/results/os_results.hpp
  include/vapours/results/ro_results.hpp
  include/vapours/results/loader_results.hpp
  include/vapours/results/err_results.hpp
  include/vapours/results/ncm_results.hpp
  include/vapours/results/svc_results.hpp
  include/vapours/results/nim_results.hpp
  include/vapours/results/exosphere_results.hpp
  include/vapours/results/creport_results.hpp
  include/vapours/results/erpt_results.hpp
  include/vapours/results/kvdb_results.hpp
  include/vapours/results/dmnt_results.hpp
  include/vapours/results/updater_results.hpp
  include/vapours/results/fatal_results.hpp
  include/vapours/results/sm_results.hpp
  include/vapours/results/psc_results.hpp

  src/NintendoSDK/gfx/detail/gfx_Buffer-api.nvn.8.cpp
  src/NintendoSDK/gfx/detail/gfx_CommandBuffer-api.nvn.8.cpp
  src/NintendoSDK/gfx/detail/gfx_CommonHelper.cpp
  src/NintendoSDK/gfx/detail/gfx_CommonHelper.h
  src/NintendoSDK/gfx/detail/gfx_GlslcFunction.cpp
  src/NintendoSDK/gfx/detail/gfx_NvnHelper.cpp
  src/NintendoSDK/gfx/detail/gfx_NvnHelper.h
  src/NintendoSDK/gfx/detail/gfx_Shader-api.nvn.8.cpp
  src/NintendoSDK/gfx/detail/gfx_State-api.nvn.8.cpp
  src/NintendoSDK/gfx/util/gfx_PrimitiveShape.cpp
  src/NintendoSDK/gfx/gfx_StateInfo.cpp
  src/NintendoSDK/nnSdk/util.cpp
)

target_include_directories(NintendoSDK PUBLIC include/)
target_compile_options(NintendoSDK PRIVATE -fno-strict-aliasing)
target_compile_options(NintendoSDK PRIVATE -Wall -Wextra)
target_compile_options(NintendoSDK PRIVATE -Wno-invalid-offsetof)
